force-app/main/default/objects/sugati__Bank_Account__c/sugati__Bank_Account__c.object-meta.xml
<CustomObject>
    <description>Bank accounts used in the invoice and financial documentation.</description>
    <label>Bank Account</label>
    <nameField>
        <label>Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>