force-app/main/default/objects/sugati__Bank_Account__c/fields/sugati__B_Account_No__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_Account_No__c</fullName>
    <label>Account No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>