force-app/main/default/objects/sugati__Bank_Account__c/fields/sugati__B_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_Address_Line_2__c</fullName>
    <label>Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>