force-app/main/default/objects/sugati__Bank_Account__c/fields/sugati__B_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_Address_Line_3__c</fullName>
    <label>Address Line 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>