force-app/main/default/objects/sugati__Bank_Account__c/fields/sugati__B_Assistant_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_Assistant_Manager_Name__c</fullName>
    <label>Assistant Manager Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>