force-app/main/default/objects/sugati__Bank_Account__c/fields/sugati__B_Assistant_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_Assistant_Manager_Phone__c</fullName>
    <label>Assistant Manager Phone</label>
    <type>Phone</type>
</CustomField>