force-app/main/default/objects/sugati__Bank_Account__c/fields/sugati__B_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_Code__c</fullName>
    <externalId>true</externalId>
    <label>Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>