force-app/main/default/objects/sugati__Bank_Account__c/fields/sugati__B_Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Portugal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>