force-app/main/default/objects/sugati__Bank_Account__c/fields/sugati__B_Fax__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_Fax__c</fullName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>