force-app/main/default/objects/sugati__Bank_Account__c/fields/sugati__B_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_Manager_Name__c</fullName>
    <description>Bank Manager Name</description>
    <inlineHelpText>Bank Manager Name</inlineHelpText>
    <label>Manager Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>