force-app/main/default/objects/sugati__Bank_Account__c/fields/sugati__B_Mobile__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_Mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>