force-app/main/default/objects/sugati__Bank_Account__c/fields/sugati__B_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_Sort_Code__c</fullName>
    <label>Sort Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>