force-app/main/default/objects/sugati__Bank_Account__c/fields/sugati__B_SWIFT__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_SWIFT__c</fullName>
    <label>SWIFT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>