force-app/main/default/objects/sugati__Bank_Account__c/fields/sugati__IsActive__c.field-meta.xml
<CustomField>
    <fullName>sugati__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Tick for the active accounts.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>