force-app/main/default/objects/sugati__Bank_Account__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__B_Sort_Code__c</columns>
    <columns>sugati__B_Account_No__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>sugati__B_IBAN__c</columns>
    <columns>sugati__B_SWIFT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>